Set ListView content height and width to 0 when the last item is deleted.

Task-number: QTBUG-16352